replace Guava with Java 8+ classes and stream API